Fixing photos on mobile

--- a/static/v2landing/main.css
+++ b/static/v2landing/main.css
@@ -1116,6 +1116,7 @@ tr:hover {
     }
     .design-images {
         grid-template-columns: 1fr !important;
+        max-height: none !important;
     }
     .design-images img {
         position: static !important;
